src/objects/demo1__c.object
<CustomObject>
    <fields>
        <fullName>Demo1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Store</description>
        <label>Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>demo2__c</fullName>
        <label>demo2</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>demo3__c</fullName>
        <label>demo3</label>
        <type>Phone</type>
    </fields>
</CustomObject>